Created register and login logic

--- a/src/main/resources/db.changelog/liquibase.properties
+++ b/src/main/resources/db.changelog/liquibase.properties
@@ -1,4 +1,4 @@
-changelogFile=src\\main\\resources\\db.changelog\\changelog-root.xml
+changelogFile=src\\main\\resources\\db.changelog\\changelog.xml
 url=jdbc:postgresql://localhost:5432/wechat
 username=XleBini
 password=1234
