--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: wechat
+  datasource:
+    url: jdbc:postgresql://localhost:5432/wechat
+    username: XleBini
+    password: 1234
+  jpa:
+    hibernate:
+      ddl-auto: none
